--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 -->
 <head>
     <title>New Note</title>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20100%20100%22%3E%3Ctext%20y%3D%22.9em%22%20font-size%3D%2290%22%3E%F0%9F%93%9D%EF%B8%8F%3C%2Ftext%3E%3C%2Fsvg%3E" />
     <style>
         body {
             margin: 0;
