Remove placeholder prompt.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="editor">
-            <textarea id="notepad" autofocus placeholder="Start typing..."></textarea>
+            <textarea id="notepad" autofocus></textarea>
         </div>
         <div class="status-bar">
             <div>
